# embed-markdown

./: CONTRIBUTE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  setup.cfg
.github/: pull_request_template.md
.github/workflows/: check-pr-body.yml  publish.yml
