[metadata]
name = embed-md
version = 0.0.1
author = Yu
author_email = yu@pocketgems.com
description = Embed-MD embeds code snippets into Markdown files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pocketgems/embed-md
project_urls =
    Bug Tracker = https://github.com/pocketgems/embed-md/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Development Status :: 5 - Production/Stable

[options]
python_requires = >=3.6
scripts =
    bin/embed-md
