[metadata]
name = embed-markdown
version = 1.0.0
author = Yu
author_email = yu@pocketgems.com
description = Embed-Markdown embeds code snippets into Markdown files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pocketgems/embed-markdown
project_urls =
    Bug Tracker = https://github.com/pocketgems/embed-markdown/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Development Status :: 5 - Production/Stable

[options]
python_requires = >=3.6
scripts =
    bin/embed-markdown
